"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-06-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-25-chpsim-05-02:
	  Changed printing of names in CHP dumps from definition-local
		to parent-process subinstances (aliases).
		e.g. 'definition::x' is now 'instance.x'.
		Added parent_instance to expr_dump_context, 
			checked in [non]meta_{instance,value}_reference classes
		sim/chpsim/devel_switches.h: CHPSIM_DUMP_PARENT_CONTEXT
		Much more readable now... but names not necessarily canonical.
		chpsimalloc and hacchpsimscm tests updated accordingly.


2007-06-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-25-chpsim-05-01:
	  Branch for new chpsim developments.
	  No source revision, only documentation.
	  Initial plans (no particular order):
		support value-peeks,
		instance-hierarchical names in feedback (event graphs),
		event-graph process clustering


2007-06-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-25:
	  No source revision.
	  Documentation and packaging maintainence only.  


2007-05-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-24:
	  No source revision.
	  Updated scm/TODO based on dissertation requirements.
	  Added new chpsim-guile test cases for alternators.  
	  Really need to automate event-graph animation and visualization ...
	  TODO: fix new bug case template/090.


2007-05-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-23:
	  Cleaned up and perm'd some switches: CHPSIM_VISIT_EXECUTE.


2007-05-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-22-merged-chpsim-04-34:
	  Branch merge.  Summary:
	  chpsim's execution model for channels re-done, now as a slack-0
		channel where corresponding send-receives action pairs are